1)增加redis协议命令: scan, msetnx, estrange, scan, lpushx, rpushx, rpoplpush, zrem, zunionstore, zinterstore, zscan, sadd, smembers, srem, scard, sscan, sismember, smove, sinter, sunion, sdiff, sinterstore, sunionstore, sdiffstore 。2)增加max connection限制。 3) FIX 主从同步的状态bug。 4) 增加binlog的leveldb option参数。 5)增加统计。 6）增加client list, client kill的连接管理  7) config rewrite，增加config相关指令  6) 调整binlog的格式，增加version的存储以便后续的升级

--- a/ssdb.conf
+++ b/ssdb.conf
@@ -17,6 +17,7 @@ server:
 	#allow: 192.168
 	# auth password must be longer than 31 characters
 	#auth: very-strong-password
+	#max_connection: 10000
 
 replication:
 	binlog: yes
