--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 include ../build_config.mk
 
-OBJS = proc_kv.o proc_hash.o proc_zset.o proc_queue.o \
+OBJS = proc_kv.o proc_hash.o proc_zset.o proc_queue.o proc_set.o \
 	backend_dump.o backend_sync.o slave.o \
 	serv.o
 LIBS = ./ssdb/libssdb.a ./util/libutil.a ./net/libnet.a
@@ -29,6 +29,8 @@ proc_zset.o: serv.h proc_zset.cpp
 	${CXX} ${CFLAGS} -c proc_zset.cpp
 proc_queue.o: serv.h proc_queue.cpp
 	${CXX} ${CFLAGS} -c proc_queue.cpp
+proc_set.o: serv.h proc_set.cpp
+	${CXX} ${CFLAGS} -c proc_set.cpp
 
 serv.o: serv.h serv.cpp
 	${CXX} ${CFLAGS} -c serv.cpp
