1）增加连接的idle超时控制，定期进行空闲连接回收: timeout参数  2）增加单连接的输出最大buffer限制: client_output_limit 参数  3）增加info的byte_read, byte_written的统计 4）调整client list的输出，增加age,idle,cmd（上个命令）的支持 5）增加bin log的容量设置：binlog_capacity 参数 6）增加config set命令，可以配置server.max_connection, server.timeout, server.client_output_limit,replication.binlog_capacity。 7）调整tool/ssdb-cli对于client list的输出格式

--- a/ssdb.conf
+++ b/ssdb.conf
@@ -17,10 +17,14 @@ server:
 	#allow: 192.168
 	# auth password must be longer than 31 characters
 	#auth: very-strong-password
-	#max_connection: 10000
+	#max_connections: 10000
+	# default : 100 MByte (1024 * 1024 * 100)
+	#client_output_limit: 104857600
+	#timeout: 1000
 
 replication:
 	binlog: yes
+	# binlog_capacity: 10000000
 	# Limit sync speed to *MB/s, -1: no limit
 	sync_speed: -1
 	slaveof:
