[1.8.0.3] 1) 提供readonly支持，默认false  2) 提供config get支持。 3) 支持动态变更server.allow, server.deny.  4) fix config del方法的bug。 5) 调整tools/ssdb-cli.cpy的config功能展示问题

--- a/ssdb.conf
+++ b/ssdb.conf
@@ -21,6 +21,7 @@ server:
 	# default : 100 MByte (1024 * 1024 * 100)
 	#client_output_limit: 104857600
 	#timeout: 1000
+	#readonly: no
 
 replication:
 	binlog: yes
