调整配置文件中server.allow和server.deny的多ip通过逗号分隔

--- a/ssdb.conf
+++ b/ssdb.conf
@@ -13,6 +13,8 @@ server:
 	# format: allow|deny: all|ip_prefix
 	# multiple allows or denys is supported
 	#deny: all
+	#deny: 192.168
+	#deny: 192.168,10.73
 	#allow: 127.0.0.1
 	#allow: 192.168
 	# auth password must be at least 32 characters
