1）增加慢日志记录，支持动态变更 2）变更info命令的输出格式和增加一些统计项write_calls、read_calls

--- a/ssdb.conf
+++ b/ssdb.conf
@@ -24,6 +24,8 @@ server:
 	#client_output_limit: 104857600
 	#timeout: 1000
 	#readonly: no
+	# ms 
+	#slow_time: 500
 
 replication:
 	binlog: yes
@@ -43,6 +45,7 @@ replication:
 logger:
 	level: debug
 	output: log.txt
+	slowlog: slow_log.txt
 	rotate:
 		size: 1000000000
 
