--- a/ssdb.conf
+++ b/ssdb.conf
@@ -8,6 +8,7 @@ pidfile = ./var/ssdb.pid
 server:
 	ip: 127.0.0.1
 	port: 8888
+	# fsync_period: 1
 	# bind to public ip
 	#ip: 0.0.0.0
 	# format: allow|deny: all|ip_prefix
