1）Fix  TTL 的bug：当从变为主的时候，有可能老的到期的记录无法被删除。 以及当正常主从服务的时候，如果从重启了，可能导致主从都在做ttl的剔除从而导致binlog_seq不一致、以及数据不一致的问题。 2）增加server.role的配置，配置为：master 或者 slave。   3） 增加定期compact的功能。   4）优化redis scan/sscan/hscan/zscan 对于match pattern的处理。  5）增加统计项：last_compact, role, binlog_size

--- a/ssdb.conf
+++ b/ssdb.conf
@@ -8,7 +8,10 @@ pidfile = ./var/ssdb.pid
 server:
 	ip: 127.0.0.1
 	port: 8888
+	role: master
+	#role: slave
 	# fsync_period: 1
+	# compact_hour_everyday: 4
 	# bind to public ip
 	#ip: 0.0.0.0
 	# format: allow|deny: all|ip_prefix
